; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/mediatek/files-4.19/drivers/net/phy/mtk/mt753x/extr_mt753x_mdio.c_mt753x_add_gsw.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/mediatek/files-4.19/drivers/net/phy/mtk/mt753x/extr_mt753x_mdio.c_mt753x_add_gsw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gsw_mt753x = type { i32, i64 }

@mt753x_devs_lock = common dso_local global i32 0, align 4
@mt753x_id = common dso_local global i32 0, align 4
@mt753x_devs = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gsw_mt753x*)* @mt753x_add_gsw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mt753x_add_gsw(%struct.gsw_mt753x* %0) #0 {
  %2 = alloca %struct.gsw_mt753x*, align 8
  store %struct.gsw_mt753x* %0, %struct.gsw_mt753x** %2, align 8
  %3 = call i32 @mutex_lock(i32* @mt753x_devs_lock)
  %4 = load i32, i32* @mt753x_id, align 4
  %5 = add nsw i32 %4, 1
  store i32 %5, i32* @mt753x_id, align 4
  %6 = sext i32 %4 to i64
  %7 = load %struct.gsw_mt753x*, %struct.gsw_mt753x** %2, align 8
  %8 = getelementptr inbounds %struct.gsw_mt753x, %struct.gsw_mt753x* %7, i32 0, i32 1
  store i64 %6, i64* %8, align 8
  %9 = load %struct.gsw_mt753x*, %struct.gsw_mt753x** %2, align 8
  %10 = getelementptr inbounds %struct.gsw_mt753x, %struct.gsw_mt753x* %9, i32 0, i32 0
  %11 = call i32 @INIT_LIST_HEAD(i32* %10)
  %12 = load %struct.gsw_mt753x*, %struct.gsw_mt753x** %2, align 8
  %13 = getelementptr inbounds %struct.gsw_mt753x, %struct.gsw_mt753x* %12, i32 0, i32 0
  %14 = call i32 @list_add_tail(i32* %13, i32* @mt753x_devs)
  %15 = call i32 @mutex_unlock(i32* @mt753x_devs_lock)
  ret void
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1

declare dso_local i32 @list_add_tail(i32*, i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
